project completed with responsive

--- a/01-roman-cart/src/index.css
+++ b/01-roman-cart/src/index.css
@@ -1,14 +1,18 @@
 
 @import "tailwindcss";
-@keyframes scroll {
-  0% {
-    transform: translateX(0);
-  }
-  100% {
-    transform: translateX(-50%);
-  }
+.slider .slider-animation {
+  width: 3600px;
+  animation: scroll 20s linear infinite;
+}
+.slider .slider-animation:hover {
+  animation-play-state: paused;
 }
 
-.animate-scroll {
-  animation: scroll 20s linear infinite;
+@keyframes scroll {
+  0% {
+    transform: translateX(0)
+  }
+  100% {
+    transform: translateX(-1000px)
+  }
 }
